Adding Web Pages on Index Page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>The Hex Accords</title>
 </head>
 <body>
+    <div class="masthead">
+        <div class="masthead__inner-wrap">
+            <div class="masthead__menu">
+                <nav id="site-nav" class="greedy-nav">
+                    <button class="" count="2">
+                        <div class="navicon"></div>
+                    </button>
+                    <ul class="visible-links">
+                        <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://hexachords.github.io//">Hexachords</a></li>
+                        <li class="masthead__menu-item"><a href="https://hexachords.github.io/writeups.html">Write Ups</a></li>
+                    </ul>
+                    <ul class="hidden-links hidden">
+                        <li class="masthead__menu-item"><a href="https://hexachords.github.io/projects.html">Projects</a></li>
+                        <li class="masthead__menu-item"><a href="https://hexachords.github.io/about.html">About</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
     <h1>hello  lets test this</h1>
 </body>
 </html>
