--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <div class="navicon"></div>
                     </button>
                     <ul class="visible-links">
-                        <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://hexachords.github.io//">Hexachords</a></li>
+                        <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://hexachords.github.io/">Hexachords</a></li>
                         <li class="masthead__menu-item"><a href="https://hexachords.github.io/writeups.html">Write Ups</a></li>
                     </ul>
                     <ul class="hidden-links hidden">
