--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
+title: "The Binary Monolith"
 ---
-  <h1>hexacodes </h1>
-    <p> tempura fried</p>
+  <h1>filler code </h1>
+    <p> filler codes</p>
 
